<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_altas"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="148dp"
        android:onClick="abrirActivities"
        android:text="@string/btn_altas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_bajas"
        android:layout_width="134dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="144dp"
        android:onClick="abrirActivityBajas"
        android:text="@string/btn_bajas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_altas" />

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="156dp"
        android:onClick="abrirConsultas"
        android:text="@string/btn_consultas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cambios" />

    <Button
        android:id="@+id/btn_cambios"
        android:layout_width="133dp"
        android:layout_height="61dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="148dp"
        android:onClick="abrirActivityCambios"
        android:text="@string/btn_cambios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bajas" />

</androidx.constraintlayout.widget.ConstraintLayout>